# MechGen

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: collision.py  optimizer.py  orchestrator.py  retrieval.py
backend/app/api/: deps.py
backend/app/api/v1/: agents.py  collision.py  models.py  tasks.py
backend/app/core/: config.py  events.py  security.py
backend/app/models/: asset.py  rule.py  task.py
backend/app/schemas/: collision.py  model.py  task.py
backend/app/services/: agent_engine.py  collision_service.py  model_service.py  task_orchestrator.py
backend/app/workers/: inference.py  training.py
docs/superpowers/plans/: 2026-04-30-cyberpunk-ui-implementation.md
docs/superpowers/specs/: 2026-04-28-antidrone-tactics-design.md  2026-04-30-cyberpunk-ui-design.md
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  components.d.ts  main.ts
frontend/src/api/: index.ts  models.ts  tasks.ts
frontend/src/assets/styles/: global.scss  mixins.scss  variables.scss
frontend/src/components/canvas/: ChatPanel.vue  ModelCanvas.vue  NodePanel.vue
frontend/src/components/layout/: AppLayout.vue  SideNav.vue  TopBar.vue
frontend/src/mock/: data.ts
frontend/src/router/: index.ts
frontend/src/stores/: model.ts  task.ts
frontend/src/types/: model.ts  task.ts
frontend/src/views/assets/: AssetsView.vue
frontend/src/views/evaluation/: EvaluationView.vue
frontend/src/views/training/: TrainingView.vue
(+1 files in other folders)
