[project]
name = "mechgen-backend"
version = "0.1.0"
description = "反无技战法生成模块 - 后端服务"
readme = "README.md"
authors = [
    { name = "hillwangben", email = "an001boy@163.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "celery>=5.4",
    "pydantic>=2.7",
    "websockets>=12.0",
    "httpx>=0.27",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "alembic>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
